# speakez

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/client/: event.rs  handler.rs  mod.rs  state.rs
src/connection/: mod.rs
src/proto/: codec.rs  error.rs  message.rs  mod.rs  parser.rs  serializer.rs
src/tui/: app.rs  ui.rs
