[package]
name = "speakez"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "speakez"
path = "src/main.rs"

[lib]
name = "irc_client"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
unicode-width = "0.2.2"
clap = { version = "4.5.60", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
